--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Viktoria Gara</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi repellendus facilis sunt dolor magni alias totam repudiandae, consectetur illum libero?
-        
-    </p>
+    </p> 
+        <h2>Önéletrajz</h2>
+        <p>Iskoláim</p>
+        <ul>
+        <li>1996-2004 [Arany János Általános iskola]
+        </li>
+        <li>2004-2008 [Bólyai János Gimnázium] </li>
+    </ul>
+
+    
 </body>
 </html>
