--- a/index.html
+++ b/index.html
@@ -7,15 +7,46 @@
     <title>Viktoria Gara</title>
 </head>
 <body>
-    <h1>Viktoria Gara</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi repellendus facilis sunt dolor magni alias totam repudiandae, consectetur illum libero?
-    </p> 
+    <h1>Gara Viktória</h1> 
         <h2>Önéletrajz</h2>
-        <p>Iskoláim</p>
+        <h3>Személyes adatok</h3>
+           <ul>
+            <li>Név: Gara Viktória</li>
+            <li>Születési idő: 1989.10.11</li>
+            <li>Lakcím: Németország</li>
+            <li>e-mail: viktoria.gara89@gmail.com</li>
+            <li>Telefonszám: +49123456789</li>
+        </ul>
+        <h3>Tanulmányok</h3>
         <ul>
-        <li>1996-2004 [Arany János Általános iskola]
+        <li>1996-2004: Arany János Általános iskola
         </li>
-        <li>2004-2008 [Bólyai János Gimnázium] </li>
+        <li>2004-2008: Bólyai János Gimnázium</li>
+    </ul>
+    <h3>Szakmai tapasztalat</h3>
+    <ul>
+        <li>Magyarország - ...</li>
+        <li>Svájc - ...</li>
+        <li>Németország - ...</li>
+    </ul>
+    <h3>Nyelvismeret</h3>
+    <ul>
+        <li>Német - folyékonyan szóban és írásban (b2 középfok)</li>
+        <li>Angol - (kezdő)</li>
+    </ul>
+    <h3>Kompetenciák</h3>
+    <ul>
+        <li>Erős kommunikációs készség, magabiztosság, 
+            barátságosság,tanulékonyság, fejlődés orientáltság, kitartás</li>
+            <li>15 év gépjárművezetési tapasztalat</li>
+            <li>Megbízhatóság</li>
+    </ul>
+    <h3>Hobbi</h3>
+    <ul>
+        <li>Sport - Kettlebell</li>
+        <li>Tanulás</li>
+        <li>Olvasás</li>
+        <li>Önfejlesztés</li>
     </ul>
 
     
