--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
         <h2>Önéletrajz</h2>
         <h3>Személyes adatok</h3>
            <ul>
-            <li>Név: Gara Viktória</li>
-            <li>Születési idő: 1989.10.11</li>
-            <li>Lakcím: Németország</li>
-            <li>e-mail: viktoria.gara89@gmail.com</li>
-            <li>Telefonszám: +49123456789</li>
+            <li><strong>Név:</strong> Gara Viktória</li>
+            <li><strong>Születési idő:</strong> 1989.10.11</li>
+            <li><strong>Lakcím:</strong> Németország</li>
+            <li><strong>e-mail:</strong> viktoria.gara89@gmail.com</li>
+            <li><strong>Telefonszám:</strong> +49123456789</li>
         </ul>
         <h3>Tanulmányok</h3>
         <ul>
-        <li>1996-2004: Arany János Általános iskola
+        <li><strong>1996-2004:</strong>  <em>Arany János Általános iskola</em> </li>
+        <li><strong>2004-2008:</strong> <em>Bólyai János Gimnázium</em>
+
         </li>
-        <li>2004-2008: Bólyai János Gimnázium</li>
     </ul>
     <h3>Szakmai tapasztalat</h3>
     <ul>
-        <li>Magyarország - ...</li>
-        <li>Svájc - ...</li>
-        <li>Németország - ...</li>
+        <li><strong>Magyarország</strong> - ...</li>
+        <li><strong>Svájc</strong> - ...</li>
+        <li><strong>Németország</strong> - ...</li>
     </ul>
     <h3>Nyelvismeret</h3>
     <ul>
-        <li>Német - folyékonyan szóban és írásban (b2 középfok)</li>
-        <li>Angol - (kezdő)</li>
+        <li><strong>Német</strong> - folyékonyan szóban és írásban (b2 középfok)</li>
+        <li><strong>Angol</strong> - (kezdő)</li>
     </ul>
     <h3>Kompetenciák</h3>
     <ul>
-        <li>Erős kommunikációs készség, magabiztosság, 
-            barátságosság,tanulékonyság, fejlődés orientáltság, kitartás</li>
-            <li>15 év gépjárművezetési tapasztalat</li>
-            <li>Megbízhatóság</li>
+        <li><strong>Személyes kompetenciák:</strong> Erős kommunikációs készség, magabiztosság, 
+            barátságosság,tanulékonyság, fejlődés orientáltság, kitartás, megbízhatóság</li>
+            <li><strong>Egyéb kompetenciák:</strong> 15 év gépjárművezetési tapasztalat</li>
     </ul>
     <h3>Hobbi</h3>
     <ul>
