--- a/index.html
+++ b/index.html
@@ -37,9 +37,22 @@
     </ul>
     <h3>Kompetenciák</h3>
     <ul>
-        <li><strong>Személyes kompetenciák:</strong> Erős kommunikációs készség, magabiztosság, 
-            barátságosság,tanulékonyság, fejlődés orientáltság, kitartás, megbízhatóság</li>
-            <li><strong>Egyéb kompetenciák:</strong> 15 év gépjárművezetési tapasztalat</li>
+        <li><strong>Személyes kompetenciák:</strong>
+            <ul> 
+                <li>Erős kommunikációs készség</li>
+                <li>Magabiztosság</li>
+                <li>Barátságosság</li>
+                <li>Tanulékonyság</li>
+                <li>Fejlődés orientáltság</li>
+                <li>Kitartás</li>
+                <li>Megbízhatóság</li>
+        </ul>
+        </li>
+            <li><strong>Egyéb kompetenciák:</strong> 
+                <ul>
+                    <li>15 év gépjárművezetési tapasztalat</li>
+                </ul>
+            </li>
     </ul>
     <h3>Hobbi</h3>
     <ul>
