--- a/Önéletrajz1.html
+++ b/Önéletrajz1.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Gara Viktória</h1> 
+    <img
+    width="250px"
+    src="./images/profil2.jpg" 
+    alt="">
         <h2>Önéletrajz</h2>
         <h3>Személyes adatok</h3>
         <ul>
@@ -62,6 +66,6 @@
         <li>Önfejlesztés</li>
     </ul>
 
-    
+    <a href="index.html">Vissza</a>
 </body>
 </html>
