--- a/Önéletrajz1.html
+++ b/Önéletrajz1.html
@@ -37,7 +37,7 @@
     <h3>Nyelvismeret</h3>
     <ul>
         <li><strong>Német</strong> - folyékonyan szóban és írásban (b2 középfok)</li>
-        <li><strong>Angol</strong> - (kezdő)</li>
+        <li><strong>Angol</strong> - alapfok</li>
     </ul>
     <h3>Kompetenciák</h3>
     <ul>
