--- a/index.html
+++ b/index.html
@@ -5,53 +5,148 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Személyes Portfólió</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/base.css">
+    <link rel="stylesheet" href="./assets/header.css">
+    <link rel="stylesheet" href="./assets/fooldal.css">
+    <link rel="stylesheet" href="./assets/rolam.css">
 </head>
 <body>
+    <!--Header-->
     <header>
-        <div class="logo"><a href="#">Gara Viktória Front-end Developer</a></div>
-        
-        <nav>                                    
-            <ul>
-                <li><a href="#">Főoldal</a></li>
-                <li><a href="Önéletrajz1.html">Bemutatkozás</a></li>
-                <li><a href="about.html">Galéria</a></li>
-                <li><a href="kapcsolat.html">Kapcsolat</a></li>
-            </ul>            
-        </nav>
+        <!--Logo-->
+        <a href="#fooldal" class="header-logo">
+            <img src="./images/logo2.png" alt="Viktoria Gara logo">
+        </a>
+        <nav> 
+            <input type="checkbox" id="nav-checkbox" class="nav-checkbox">   
+            <label for="nav-checkbox">
+            <div  class="nav-checkbox__gomb">
+                <div class="nav-checkbox__vonal"></div>
+                <div class="nav-checkbox__vonal"></div>
+                <div class="nav-checkbox__vonal"></div>
+            </div>
+        </label>
+        <ul class="header-lista">
+            <li class="header-lista__elem"><a href=" #fooldal">Startseite</a></li>
+            <li class="header-lista__elem"><a href="#rolam">Über mich</a></li>
+            <li class="header-lista__elem"><a href="#portfolio">Portfolio</a></li>
+            <li class="header-lista__elem"><a href="#kapcsolat">Kontakt</a></li>
+        </ul>
+        </nav>     
     </header>
+    <!--MAIN-->
     <main>
-        <section class="tartalom">
-            <div class="bemutatkozas">               
-                <h3>Üdvözöllek az oldalamon!</h3>
-                <p>2021 óta foglalkozom weboldalak készítésével.Ismereteim körébe tartoznak:</p>
-                <ul class="body-menu">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Python</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                </ul>               
-                <p>Keressen bizalommal,hogy együtt megvalósítsuk elképzeléseit.</p>
-                <!--<img 
-                width="350px"
-                src="./images/tartalom.png" 
-                alt="tartalom">  -->          
-            </div>           
-    </main>
-
-    <footer>
-        <nav>
-            <ul class="social-links">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">LinkedIn</a></li>
+        <!--Főoldal-->
+        <section id="fooldal">
+            <!--konténer-->
+            <div class="fooldal-kontener">
+                <h1 class="fooldal-nev">Viktoria Gara</h1>
+                <h2 class="fooldal-szakma">Frontend
+                    <span class="fooldal-szakma__kiemeles">Developer</span>
+                </h2>
+                <a href="#kapcsolat" class="fooldal-gomb">Kontakt</a>
+            </div>
+            <!--Kép-->
+            <!--<img src="./images/Black_Gold_Modern_Building_A_Digital_Successful_Business_Instagram_Post.png" alt="Viktoria Gara" class="fooldal-kep"> -->
+        </section>
+        <!--Rólam-->
+        <section id="rolam">
+            <!--Cím-->
+            <!--Konténer-->
+            <div class="rolam-kontener">
+                <!--Technológia-->
+                <div class="rolam-technologiak">
+                    <img 
+                    class="rolam-technologiak__kep"
+                    src="./images/profil.png" alt="Viktoria Gara">
+                    <div class="rolam-technologiak__kontener">
+                        <p class="rolam-technologiak__cim">Technologie:</p>
+                        <ul class="rolam-technologiak__lista">
+                            <li class="rolam-technologiak__elem">HTML</li>
+                            <li class="rolam-technologiak__elem">CSS</li>
+                            <li class="rolam-technologiak__elem">JavaScript</li>
+                            <li class="rolam-technologiak__elem">Wordpress</li>
+                        </ul>
+                    </div>
+            </div>
+                <!--Tartalom-->
+            <div class="rolam-tartalom">
+                <h4 class="rolam-tartalom__udv">Hello, Ich heiße</h4>
+                <h3 class="rolam-tartalom__nev">Viktoria Gara</h3>
+                <h4 class="rolam-tartalom__udv">Frontend Developer</h4>
+                <p class="rolam-tartalom__szoveg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur esse ex enim omnis nemo, perspiciatis labore totam. Beatae, laudantium excepturi?</p>
+                <div class="rolam-tartalom__kontener">
+                    <a class="rolam-tartalom__gomb" href="./assets/Önéletrajz1.html" download>Lebenslauf</a>
+                </div>
+            </div>        
+            </div>
+        </section>
+        <!--Portfólió-->
+        <section id="portfolio">
+            <!--Cim-->
+            <h2 class="section-cim">Portfolio</h2>
+            <div class="portfolio-kontener">
+                <div class="portfolio-projekt">
+                    <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
+                    <div class="portfolio-projekt__kontener">
+                        <h3>Portfolio Seite</h3>
+                        <div class="portfolio-projekt__linkek">
+                            <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/" target="_blank"><i class="fa-solid fa-arrow-right"></i></a>
+                        </div>               
+                    </div>
+                </div>
+            
+                <div class="portfolio-projekt">
+                    <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
+                    <div class="portfolio-projekt__kontener">
+                        <h3>Portfolio Seite</h3>
+                        <div class="portfolio-projekt__linkek">
+                            <a href="https://github.com/viktoria-gara" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/viktoria-gara" target="_blank"><i class="fa-solid fa-arrow-right"></i></a>
+                        </div>               
+                    </div>
+                </div> 
+        </section>
+        <!--Kapcsolat-->
+        <section id="kapcsolat">
+            <h2 class="section-cim">Kontakt</h2>
+            <h3 class="kapcsolat-szoveg">Hier können Sie mir Ihre Nachricht senden</h3>
+            <form class="kapcsolat-form" action="https://formspree.io/f/mzbqpwvb"
+            method="POST">
+            <input type="text" name="name" id="name" placeholder="Name">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <textarea id="message" name="message" placeholder="Nachricht"></textarea>
+            <input type="submit" value="Senden"> 
+            </form>
+            <ul class="kapcsolat-social">
+                <li class="kapcsolat-social__elem">
+                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li class="kapcsolat-social__elem">
+                    <a href="https://de.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
+                <li class="kapcsolat-social__elem">
+                    <a href="https://github.com/viktoria-gara" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+                </li>
             </ul>
-        </nav>
-        Copyright &copy; Gara Viktória 2022
+        </section>
+    </main>
+    <!--Footer-->
+    <footer>
+        <div class="footer-copyright">
+            <p class="footer-copyright__elem">Copyright</p>
+            <span class="footer-copyright__elem">&copy;</span>
+            <p class="footer-copyright__elem">2023 Viktoria Gara</p>
+        </div>
+        <div class="footer-vissza">
+            <a href="#fooldal">
+                <i class="fa-solid fa-chevron-up"></i>
+            </a>
+        </div>
     </footer>
-
 </body>
 </html>
