--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Személyes Portfólió</title>
+    <title>Portfolio Seite</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./assets/header.css">
     <link rel="stylesheet" href="./assets/fooldal.css">
     <link rel="stylesheet" href="./assets/rolam.css">
+    <link rel="stylesheet" href="./assets/portfolio.css">
 </head>
 <body>
     <!--Header-->
@@ -92,9 +94,9 @@
                 <div class="portfolio-projekt">
                     <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
                     <div class="portfolio-projekt__kontener">
-                        <h3>Portfolio Seite</h3>
+                        <h3>Portfolio projekt</h3>
                         <div class="portfolio-projekt__linkek">
-                            <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/viktoria-gara/viktoria-gara.github.io" target="_blank"><i class="fa-brands fa-github"></i></a>
                             <a href="https://github.com/" target="_blank"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>               
                     </div>
@@ -103,7 +105,7 @@
                 <div class="portfolio-projekt">
                     <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
                     <div class="portfolio-projekt__kontener">
-                        <h3>Portfolio Seite</h3>
+                        <h3>Portfolio projekt</h3>
                         <div class="portfolio-projekt__linkek">
                             <a href="https://github.com/viktoria-gara" target="_blank"><i class="fa-brands fa-github"></i></a>
                             <a href="https://github.com/viktoria-gara" target="_blank"><i class="fa-solid fa-arrow-right"></i></a>
@@ -124,7 +126,7 @@
             </form>
             <ul class="kapcsolat-social">
                 <li class="kapcsolat-social__elem">
-                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://gmail.com/" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                 </li>
                 <li class="kapcsolat-social__elem">
                     <a href="https://de.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
