--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <nav> 
             <input type="checkbox" id="nav-checkbox" class="nav-checkbox">   
             <label for="nav-checkbox">
-            <div  class="nav-checkbox__gomb">
-                <div class="nav-checkbox__vonal"></div>
-                <div class="nav-checkbox__vonal"></div>
-                <div class="nav-checkbox__vonal"></div>
-            </div>
+            <span  class="nav-checkbox__gomb">
+                <span class="nav-checkbox__vonal"></span>
+                <span class="nav-checkbox__vonal"></span>
+                <span class="nav-checkbox__vonal"></span>
+            </span>
         </label>
         <ul class="header-lista">
             <li class="header-lista__elem"><a href=" #fooldal">Startseite</a></li>
@@ -101,7 +101,7 @@
                         </div>               
                     </div>
                 </div>
-            
+            </div>
                 <div class="portfolio-projekt">
                     <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
                     <div class="portfolio-projekt__kontener">
