footer,kontakt javitasok

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./assets/fooldal.css">
     <link rel="stylesheet" href="./assets/rolam.css">
     <link rel="stylesheet" href="./assets/portfolio.css">
+    <link rel="stylesheet" href="./assets/kapcsolat.css">
+    <link rel="stylesheet" href="./assets/footer.css">
 </head>
 <body>
     <!--Header-->
@@ -101,7 +103,6 @@
                         </div>               
                     </div>
                 </div>
-            </div>
                 <div class="portfolio-projekt">
                     <img src="./images/referencia.png" alt="Meine Projekte" class="portfolio-projekt__kep">
                     <div class="portfolio-projekt__kontener">
@@ -112,6 +113,7 @@
                         </div>               
                     </div>
                 </div> 
+            </div>
         </section>
         <!--Kapcsolat-->
         <section id="kapcsolat">
@@ -142,7 +144,7 @@
         <div class="footer-copyright">
             <p class="footer-copyright__elem">Copyright</p>
             <span class="footer-copyright__elem">&copy;</span>
-            <p class="footer-copyright__elem">2023 Viktoria Gara</p>
+            <p class="footer-copyright__elem">2023 - Viktoria Gara</p>
         </div>
         <div class="footer-vissza">
             <a href="#fooldal">
