--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
     </main>
     <!--Footer-->
     <footer>
-        <div class="footer-copyright">
+       <!-- <div class="footer-copyright">
             <p class="footer-copyright__elem">Copyright</p>
             <span class="footer-copyright__elem">&copy;</span>
             <p class="footer-copyright__elem">2023 - Viktoria Gara</p>
-        </div>
+        </div>-->
+        <p>Copyright &copy; 2023 - Viktoria Gara</p>
         <div class="footer-vissza">
             <a href="#fooldal">
                 <i class="fa-solid fa-chevron-up"></i>
