--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,5 +10,6 @@
     <div>
         <p>Datenschutz ist in bearbeitung</p>
     </div>
+    <a href="./index.html"><button>Startseite</button></a>
 </body>
 </html>
