--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,6 +10,6 @@
     <div>
         <p>Datenschutz ist in bearbeitung</p>
     </div>
-    <a href="./index.html"><button>Startseite</button></a>
+    <a href="./index.html"><button>Zurück</button></a>
 </body>
 </html>
