portfolio fertig gestellt

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <div class="rolam-kontener">
                 <!--Technológia-->
                 <div class="rolam-technologiak">
-                    <img 
+                    <!--<img 
                     class="rolam-technologiak__kep"
-                    src="./images/profil.png" alt="Viktoria Gara">
+                    src="./images/profil.png" alt="Viktoria Gara">-->
                     <div class="rolam-technologiak__kontener">
                         <p class="rolam-technologiak__cim">Technologie:</p>
                         <ul class="rolam-technologiak__lista">
@@ -81,7 +81,10 @@
                 <h4 class="rolam-tartalom__udv">Hello, Ich heiße</h4>
                 <h3 class="rolam-tartalom__nev">Viktoria Gara</h3>
                 <h4 class="rolam-tartalom__udv">Frontend Developer</h4>
-                <p class="rolam-tartalom__szoveg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur esse ex enim omnis nemo, perspiciatis labore totam. Beatae, laudantium excepturi?</p>
+                <img 
+                    class="rolam-tartalom__kep"
+                    src="./images/profil.png" alt="Viktoria Gara">
+                <p class="rolam-tartalom__szoveg">Ich habe als Stilberaterin gelernt, bisher beschäftigte ich mich mit Menschen. Dabei stellte ich fest, dass ich mich besonders für den Bereich -Web Entwicklung- interessiere. Ich habe viel über die Farben und Sytlen gelernt und ich möchte alles umsetzen und mit online Platformen und Web Entwicklung alle Wünsche erfüllen, Ihre Web Site nach Wunsch und in bester Qualität selbst gestalten.</p>
                 <div class="rolam-tartalom__kontener">
                     <a class="rolam-tartalom__gomb" href="./assets/Önéletrajz1.html" download>Lebenslauf</a>
                 </div>
@@ -146,6 +149,10 @@
             <span class="footer-copyright__elem">&copy;</span>
             <p class="footer-copyright__elem">2023 - Viktoria Gara</p>
         </div>-->
+        <div class="footer-elemek">
+            <a href="./impressum.html">Impressum</a>
+            <a href="./datenschutz.html">Datenschutz</a>
+        </div>
         <p>Copyright &copy; 2023 - Viktoria Gara</p>
         <div class="footer-vissza">
             <a href="#fooldal">
