fehler behebung nach validation

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutz</title>
+    <link rel="stylesheet" href="./assets/datenschutz.css">
 </head>
 <body>
     <div>
         <p>Datenschutz ist in bearbeitung</p>
     </div>
-    <a href="./index.html"><button>Zurück</button></a>
+    <a href="./index.html">Zurück</a>
 </body>
 </html>
