--- a/impressum.html
+++ b/impressum.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum</title>
+    <link rel="stylesheet" href="./assets/impressum.css">
 </head>
 <body>
     <div>
@@ -13,6 +14,6 @@
     <p><strong>Telefonnummer: </strong>+49/176 73 87 7035</p>
     <p><strong>E-mail: </strong>viktoria.gara89gmail.com </p>
 </div>
-<a href="./index.html"><button>Zurück</button></a>
+<a href="index.html">Zurück</a>
 </body>
 </html>
