--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
                     <span class="fooldal-szakma__kiemeles">Developer</span>
                 </h2>
                 <a href="#kapcsolat" class="fooldal-gomb">Kontakt</a>
-            </div>
-            <!--Kép-->
-            <!--<img src="./images/Black_Gold_Modern_Building_A_Digital_Successful_Business_Instagram_Post.png" alt="Viktoria Gara" class="fooldal-kep"> -->
         </section>
         <!--Rólam-->
         <section id="rolam">
@@ -63,9 +60,6 @@
             <div class="rolam-kontener">
                 <!--Technológia-->
                 <div class="rolam-technologiak">
-                    <!--<img 
-                    class="rolam-technologiak__kep"
-                    src="./images/profil.png" alt="Viktoria Gara">-->
                     <div class="rolam-technologiak__kontener">
                         <p class="rolam-technologiak__cim">Technologie:</p>
                         <ul class="rolam-technologiak__lista">
@@ -81,6 +75,7 @@
                 <h4 class="rolam-tartalom__udv">Hello, Ich heiße</h4>
                 <h3 class="rolam-tartalom__nev">Viktoria Gara</h3>
                 <h4 class="rolam-tartalom__udv">Frontend Developer</h4>
+                <!--Kep-->
                 <img 
                     class="rolam-tartalom__kep"
                     src="./images/profil.png" alt="Viktoria Gara">
